2008-10-26  smeghead <smeghead@users.sourceforge.jp>

    * リリース準備

2008-10-23  smeghead <smeghead@users.sourceforge.jp>

    * TAKAHASHI hideakiさんから頂いたパッチを取り込んだ。
    * バッファオーバーフローの対策
    * コンパイル時の警告の回避

2008-10-04  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールのスタイル設定で、正しく値を取得できていないために、スタイル設定が上書きされてしまう問題を修正。
    * h4のスタイルシート設定を追加。トップページの編集部分のスタイル調整のため。
    * リリース準備

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.2 リリース

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * トップ画像のキャッシュ指定が正しくなかったために、トップ画像が表示されない問題を修正。
      Expiresではなく、Cache-Control: max-arg で指定するように修正した。

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.1 リリース

2008-09-07  smeghead <smeghead@users.sourceforge.jp>

    * top_imageの返却に有効期限を追加した。キャッシュしてもらうため。

2008-09-07  smeghead  <smeghead@debian>

	* .htaccessの問題のため、internal server errorの場合に、error.htmlが表示できなかったのを修正。
	* cgiの拡張子を動的に取得してリンクのファイル名を決定するように修正。Windows対応。
    * プロジェクトの設定内容を格納するテーブルをprojectからsetting(新規テーブル)に変更。projectテーブルは廃止。
    * user.cssをsetting_file(新規テーブル)に格納するように修正。
    * トップ画像をseting_fileに格納するように修正。

    以前のバージョンからの移行手順
    (1) 以前のStarbug1のディレクトリをバックアップする。
      任意のディレクトリにコピーしておいてください。

    (2) 通常のインストール手順によりインストールする。

    (3) データベースの存在するディレクトリに移動する。
    # cd <Starbug1のディレクトリ>/db

    (4) 以前のStarbug1のデータベースをコピーする。
    # cp <以前のStarbug1のバックアップ先>/db/starbug1.db <Starbug1のディレクトリ>/db/

    (5) projectテーブルに格納されていた、以前の設定をsettingテーブル(新規)に移行する。
    # cat | sqlite3 starbug1.db
    create table setting(name text primary key, value text);
    insert into setting(name, value) select 'project_name', name from project;
    insert into setting(name, value) select 'home_url', home_url from project;
    create table setting_file(name text primary key, file_name text, size
    integer, mime_type text, content blob);
    insert into setting_file(name, content) values ('user.css', '');
    insert into setting_file(name, content) values ('top_image', '');
    <CTRL-D>